Fix mobile cell height stability - prevent stretching on click

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,22 +34,32 @@ table {
   border-bottom: 2px solid white;
 }
 
-@media screen and (max-width: 500px) {
-  td {
-    width: 75px;
-    height: 75px;
-  }
-  
-  .square {
-    font-size: 32px;
-    padding: 0;
-    line-height: 75px;
-  }
-}
-
 .square {
   width: 100%;
   height: 100%;
   text-align: center;
   font-size: 64px;
+}
+
+@media screen and (max-width: 500px) {
+  table {
+    border-spacing: 0;
+  }
+  
+  td {
+    width: 75px;
+    height: 75px;
+    padding: 0;
+  }
+  
+  .square {
+    font-size: 32px;
+    padding: 0;
+    line-height: 1;
+    height: 74px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
